# Calculator

./: README.md  pyproject.toml
mysimplepycalc/: __init__.py  calculator.py
tests/: test_add.py  test_divide.py  test_exceptions.py  test_floor_divide.py  test_multiply.py  test_reset.py  test_root.py  test_subtract.py
