[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysimplepycalc"
authors = [{name = "Anastasiia Kozlovska", email = "stacykozlovska.work@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "0.0.3"
description = "Simple calculator package"
readme = "README.md"
requires-python = ">=3.7"